<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="match_parent"
        android:background="#1c5d8e">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/logo"
            android:layout_weight="1"
            android:src="@drawable/logo"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/logo_margin" />
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginLeft="@dimen/frame_button_margin"
            android:layout_marginRight="@dimen/frame_button_margin"
            android:id="@+id/frame_buttons"
            android:layout_gravity="center_horizontal">
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button_facebook"
                android:layout_weight="1"
                android:background="@drawable/custom_facebook"
                android:gravity="center"
                android:layout_gravity="center_horizontal" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_separator"
                android:background="#00000000" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/button_twitter"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/custom_twitter" />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/frame_button_bottom"
                android:background="#00000000" />

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/frame_edits"
            android:layout_gravity="center_horizontal">
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@android:style/TextAppearance.Material.Widget.EditText">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/edit_username"
                android:gravity="center"
                android:textColor="#a2a1b8"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/username"
                android:textColorHint="#a2a1b8"
                android:lines="1"/>
            </android.support.design.widget.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/line_username"
                android:background="#336e9a" />
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@android:style/TextAppearance.Material.Widget.EditText"
                style="@style/Widget.Design.TextInputLayout">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/edit_height"
                android:ems="10"
                android:id="@+id/edit_password"
                android:gravity="center"
                android:textColor="#a2a1b8"
                android:layout_weight="1"
                android:background="#00000000"
                android:hint="@string/password"
                android:textColorHint="#a2a1b8"
                style="@style/Widget.AppCompat.ImageButton" />
            </android.support.design.widget.TextInputLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:id="@+id/line_password"
                android:background="#336e9a" />
        </LinearLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/signin_tb"
        android:layout_marginBottom="@dimen/signin_tb"
        android:layout_marginLeft="@dimen/signin_lr"
        android:layout_marginRight="@dimen/signin_lr"
        android:layout_gravity="center_horizontal">
        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/button_signin"
            android:background="@drawable/custom_signin"
            android:text="@string/signin"
            android:textColor="#ffffff"
            android:textStyle="bold"
            style="@android:style/Widget.Material.ImageButton" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/signin"
            android:id="@+id/text_sigin"
            android:textColor="#ffffff"
            android:textStyle="bold" />
    </FrameLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/signin_lr">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="3dp"
                android:layout_gravity="center"
                android:text="@string/question_signin"
                android:id="@+id/question_signin"
                android:textColor="#a2a1b8" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/signup"
                android:id="@+id/text_signup"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:clickable="true" />
        </LinearLayout>
</LinearLayout>
