<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffff"
    android:focusable="false"
    android:touchscreenBlocksFocus="false"
    android:transitionGroup="false">

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/heightblue_profile_px"
        android:layout_alignParentBottom="false"
        android:id="@+id/blue"
        android:background="#336e9a"
        android:layout_alignParentLeft="false"
        android:layout_alignWithParentIfMissing="false"
        android:layout_alignParentRight="false" />

    <ImageButton
            android:layout_width="@dimen/stb_profile_px"
            android:layout_height="@dimen/stb_profile_px"
            android:id="@+id/button"
            android:layout_alignParentLeft="true"
            android:background="@drawable/menu"
            android:layout_gravity="top"
            android:gravity="center_vertical"
            android:layout_marginLeft="@dimen/mall_profile_px"
            android:layout_marginTop="@dimen/mall_profile_px" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/stb_profile_px"
            android:text="@string/profile"
            android:layout_gravity="top"
            android:id="@+id/profile"
            android:layout_centerHorizontal="true"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/mall_profile_px" />
        <ImageButton
            android:layout_width="@dimen/stb_profile_px"
            android:layout_height="@dimen/stb_profile_px"
            android:id="@+id/button2"
            android:layout_alignParentRight="true"
            android:background="@drawable/ebtn"
            android:gravity="center_vertical"
            android:layout_marginRight="@dimen/mall_profile_px"
            android:layout_marginTop="@dimen/mall_profile_px" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/image_group"
        android:baselineAligned="false"
        android:gravity="center"
        android:layout_below="@+id/blue"
        android:layout_marginTop="-53dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fblayout"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="30dp">

            <ImageView
                android:layout_width="@dimen/sfbtw_profile_px"
                android:layout_height="@dimen/sfbtw_profile_px"
                android:src="@drawable/fb"
                android:id="@+id/fb"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/mbfbtw_profile_px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fbfollowers"
                android:id="@+id/fbfollowers"
                android:layout_gravity="center_horizontal"
                android:textSize="10dp" />

        </LinearLayout>
        <FrameLayout
            android:layout_width="@dimen/sphoto_profile_px"
            android:layout_height="@dimen/sphoto_profile_px"
            android:id="@+id/photoprofile"
            android:layout_gravity="center_vertical"
            android:background="#ffffff"
            android:measureAllChildren="false"
            android:longClickable="false"
            android:layout_marginLeft="@dimen/mlrphoto_profile_px"
            android:layout_marginRight="@dimen/mlrphoto_profile_px">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/photo"
                android:id="@+id/photo"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/pphoto_profile_px" />

        </FrameLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/twlayout"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="30dp">

            <ImageView
                android:layout_width="@dimen/sfbtw_profile_px"
                android:layout_height="@dimen/sfbtw_profile_px"
                android:src="@drawable/tw"
                android:id="@+id/tw"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/mbfbtw_profile_px" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twfollowers"
                android:id="@+id/twfollowers"
                android:layout_gravity="center_horizontal"
                android:textSize="10dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/image_group"
        android:id="@+id/editbar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">>

        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left|center_vertical"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/mall_profile_px" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/usernameprint"
                android:layout_gravity="center_vertical|right"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                android:textColor="#151431"
                android:textColorHint="#151431"
                android:background="#00000000"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/mall_profile_px"
                android:editable="false"
                android:elegantTextHeight="false"
                android:password="false"
                android:textAlignment="center"
                android:textIsSelectable="true"
                android:focusableInTouchMode="false" />

        </RelativeLayout>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left|center_vertical"
                android:textColorHint="#a2a1b8"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/mall_profile_px" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/emailprint"
                android:layout_gravity="center_vertical|right"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                android:textColor="#151431"
                android:textColorHint="#151431"
                android:background="#00000000"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/mall_profile_px"
                android:lines="1"
                android:inputType="textEmailSubject"
                android:textAlignment="center" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_alignParentBottom="false"
                android:background="#336e9a"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentRight="false" />
        </RelativeLayout>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left|center_vertical"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/mall_profile_px" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="****************"
                android:layout_gravity="center_vertical|right"
                android:layout_alignParentRight="true"
                android:textStyle="bold"
                android:textColor="#151431"
                android:textColorHint="#151431"
                android:background="#00000000"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/mall_profile_px"
                android:password="false"
                android:inputType="textPassword"
                android:textAlignment="center" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_alignParentBottom="false"
                android:background="#336e9a"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentRight="false" />
        </RelativeLayout>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebookstr"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left|center_vertical"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/mall_profile_px" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_alignParentBottom="false"
                android:background="#336e9a"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentRight="false" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/fbswitch"
                android:thumb="@drawable/switch_custom_thumb"
                android:track="@drawable/switch_custom_track"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/mall_profile_px"
                android:layout_alignParentRight="true"
                android:checked="true"
                android:switchMinWidth="66dp"
                android:splitTrack="false"
                android:singleLine="false"
                android:longClickable="false"
                android:nestedScrollingEnabled="false"
                 />
        </RelativeLayout>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twitterstr"
                android:layout_alignParentLeft="true"
                android:layout_gravity="left|center_vertical"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/mall_profile_px" />
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_alignParentBottom="false"
                android:background="#336e9a"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentRight="false" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/twswitch"
                android:track="@drawable/switch_custom_track"
                android:layout_marginRight="@dimen/mall_profile_px"
                android:checked="false"
                android:switchMinWidth="66dp"
                android:splitTrack="false"
                android:singleLine="false"
                android:layout_alignBaseline="@+id/textView2"
                android:layout_alignBottom="@+id/textView2"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="19dp"
                android:textColorLink="#ff2d55" />
        </RelativeLayout>
        <RelativeLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1">
            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_alignParentBottom="false"
                android:background="#336e9a"
                android:layout_alignParentTop="false"
                android:layout_alignParentLeft="false"
                android:layout_alignWithParentIfMissing="false"
                android:layout_alignParentRight="false" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>